// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppSummary renders correctly on desktop 1`] = `
<Link
  as="/details"
  href="/details"
>
  <Link
    backgroundColor="white"
    borderColor="gray-2"
    borderWidth="x1"
    className="appSummary"
    elevation="x2"
    overflow="hidden"
  >
    <Base
      height="5rem"
    >
      <_default
        endColor="#0dd3c5"
        startColor="#0d83cd"
      />
    </Base>
    <Flex
      direction="vertical"
      gap="x4"
      padding="x8"
    >
      <Flex
        alignChildrenHorizontal="start"
        alignChildrenVertical="end"
        direction="horizontal"
        gap="x4"
        style={
          Object {
            "alignItems": "flex-end",
            "marginTop": "-5rem",
          }
        }
      >
        <_default
          borderRadius="x2"
          margin="x0"
          src="/static/icon-flutter.svg"
          width="96px"
        />
        <Flex
          alignChildrenVertical="middle"
          direction="vertical"
          grow={true}
          paddingVertical="x2"
        >
          <Text
            align="end"
            color="gray-6"
            letterSpacing="x1"
            size="x3"
            weight="medium"
          >
            Updated on January 29, 2008
          </Text>
        </Flex>
      </Flex>
      <Flex
        direction="vertical"
        gap="x2"
      >
        <Flex
          alignChildrenHorizontal="start"
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x1"
          wrap={true}
        >
          <Flex
            alignChildren="middle"
            alignChildrenHorizontal="start"
            direction="horizontal"
            gap="x2"
            maxWidth="100%"
            paddingVertical="x0"
          >
            <Icon
              color="grape-4"
              name="PlatformsApple"
              size="2rem"
              style={
                Object {
                  "_marginBottom": "-4px",
                  "display": "inline-block",
                }
              }
            />
            <Text
              align="start"
              color="grape-4"
              config="4"
              ellipsis={true}
            >
              My app v1.1.0 (28)
            </Text>
          </Flex>
        </Flex>
        <Text
          breakOn="word"
          color="grape-5"
        >
          This is a short description about my app. It is a good app. End of description.
        </Text>
      </Flex>
    </Flex>
  </Link>
</Link>
`;

exports[`AppSummary renders correctly on mobile 1`] = `
<Link
  as="/details"
  href="/details"
>
  <Link
    backgroundColor="white"
    borderColor="gray-2"
    borderWidth="x1"
    className="appSummary"
    elevation="x2"
    overflow="hidden"
  >
    <Base
      height="5rem"
    >
      <_default
        endColor="#0dd3c5"
        startColor="#0d83cd"
      />
    </Base>
    <Flex
      direction="vertical"
      gap="x0"
      padding="x4"
    >
      <Flex
        alignChildrenHorizontal="start"
        alignChildrenVertical="middle"
        direction="horizontal"
        gap="x4"
        style={
          Object {
            "alignItems": "stretch",
            "marginTop": "-5rem",
          }
        }
      >
        <_default
          borderRadius="x2"
          margin="x0"
          src="/static/icon-flutter.svg"
          width="96px"
        />
        <Flex
          alignChildrenVertical="end"
          direction="vertical"
          grow={true}
          paddingVertical="x0"
        >
          <Text
            align="end"
            color="gray-6"
            letterSpacing="x1"
            size="x3"
            weight="medium"
          >
            Updated on January 29, 2008
          </Text>
        </Flex>
      </Flex>
      <Flex
        direction="vertical"
        gap="x2"
      >
        <Flex
          alignChildrenHorizontal="middle"
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x1"
          wrap={true}
        >
          <Flex
            alignChildren="middle"
            alignChildrenHorizontal="middle"
            direction="horizontal"
            gap="x0"
            maxWidth="100%"
            paddingVertical="x4"
          >
            <Icon
              color="grape-4"
              name="PlatformsApple"
              size="1.5rem"
              style={
                Object {
                  "_marginBottom": "-4px",
                  "display": "inline-block",
                }
              }
            />
            <Text
              align="middle"
              color="grape-4"
              config="4"
              ellipsis={true}
            >
              My app v1.1.0 (28)
            </Text>
          </Flex>
        </Flex>
        <Text
          breakOn="all"
          color="grape-5"
        >
          This is a short description about my app. It is a good app. End of description.
        </Text>
      </Flex>
    </Flex>
  </Link>
</Link>
`;

exports[`AppSummary renders correctly on tablet 1`] = `
<Link
  as="/details"
  href="/details"
>
  <Link
    backgroundColor="white"
    borderColor="gray-2"
    borderWidth="x1"
    className="appSummary"
    elevation="x2"
    overflow="hidden"
  >
    <Base
      height="5rem"
    >
      <_default
        endColor="#0dd3c5"
        startColor="#0d83cd"
      />
    </Base>
    <Flex
      direction="vertical"
      gap="x4"
      padding="x8"
    >
      <Flex
        alignChildrenHorizontal="start"
        alignChildrenVertical="end"
        direction="horizontal"
        gap="x4"
        style={
          Object {
            "alignItems": "flex-end",
            "marginTop": "-5rem",
          }
        }
      >
        <_default
          borderRadius="x2"
          margin="x0"
          src="/static/icon-flutter.svg"
          width="96px"
        />
        <Flex
          alignChildrenVertical="middle"
          direction="vertical"
          grow={true}
          paddingVertical="x2"
        >
          <Text
            align="end"
            color="gray-6"
            letterSpacing="x1"
            size="x3"
            weight="medium"
          >
            Updated on January 29, 2008
          </Text>
        </Flex>
      </Flex>
      <Flex
        direction="vertical"
        gap="x2"
      >
        <Flex
          alignChildrenHorizontal="start"
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x1"
          wrap={true}
        >
          <Flex
            alignChildren="middle"
            alignChildrenHorizontal="start"
            direction="horizontal"
            gap="x2"
            maxWidth="100%"
            paddingVertical="x0"
          >
            <Icon
              color="grape-4"
              name="PlatformsApple"
              size="2rem"
              style={
                Object {
                  "_marginBottom": "-4px",
                  "display": "inline-block",
                }
              }
            />
            <Text
              align="start"
              color="grape-4"
              config="4"
              ellipsis={true}
            >
              My app v1.1.0 (28)
            </Text>
          </Flex>
        </Flex>
        <Text
          breakOn="all"
          color="grape-5"
        >
          This is a short description about my app. It is a good app. End of description.
        </Text>
      </Flex>
    </Flex>
  </Link>
</Link>
`;
